# agile-sim

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  secrets.example.yaml  tailwind.config.js
assets/: manifest.yaml
docker/: entrypoint.sh
docs/: agentic-design.md  architecture.md  assets.md  concept.md  planning.md  requirements.md  simulation-model.md  ui-design.md  ux-audit-2026-05-03.md  web-conventions.md
experiments/: coaching_ab_matrix.yaml  priority_coach_matrix.yaml  spike.py  variants.example.yaml
harness/: __init__.py  agent.py  analyse.py  assets.py  batch.py  cli.py  coach.py  coach_preset.py  engine.py  judge.py  llm.py  pipeline.py  runner.py  scenario.py  schemas.py  world.py
harness/integrations/: __init__.py  openrouter.py
harness/prompts/: agent_turn.j2  coach_turn.j2
harness/web/: app.py  (+7 more)
k8s/: deployment.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
scripts/: build_css.sh  dev.sh
src/: __init__.py  openrouter.py
tests/: test_analyse.py  test_assets_generate.py  test_assets_manifest.py  test_batch.py  test_coach_preset.py  test_dev_panel.py  test_engagement_modes.py  test_engine_consult_invoke.py  test_judge_scores_in_results.py  test_openrouter.py  test_run_reader_history.py  test_run_session.py  test_runner.py  test_runner_step.py  test_scenario.py  test_scenarios_smoke.py  test_served_models.py  test_sprites_character_set.py  test_summary_view.py  test_web_experiments.py  test_web_resolve.py  test_web_routes.py  test_web_run_reader.py  test_web_scenarios.py  test_web_sse.py  test_world.py
(+322 files in other folders)
