[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-sim"
version = "0.0.1"
description = "Simulation harness and tooling for agile-sim"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "pyyaml>=6",
    "jinja2>=3.1",
    "markdown>=3.5",
    "click>=8.1",
    "rich>=13",
    "matplotlib>=3.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
agile-harness = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
